# cargo-rdme

./: .cargo-rdme.toml  .codecov.yml  .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md  release-notes.md
.github/workflows/: ci.yml  release.yml  release_pre_build.sh
src/: console.rs  doc_inject.rs  extract_doc.rs  inject_doc.rs  lib.rs  main.rs  markdown.rs  options.rs  utils.rs
src/transform/: mod.rs  rust_markdown_tag.rs  rust_remove_comments.rs  utils.rs
src/transform/intralinks/: links.rs  mod.rs  module_walker.rs  rustdoc.rs
tests/: .cargo-rdme.toml  .gitignore  testing.rs  tests.rs
tests/avoid_overwrite_uncommitted_readme/: Cargo.toml
tests/custom_lib_path/: Cargo.toml
tests/custom_readme_path/: .gitignore  Cargo.toml  README-expected.md
tests/entrypoint_bin_lib_crate_lib_wins/: Cargo.toml  README-expected.md
tests/entrypoint_bin_lib_crate_lib_wins/src/: lib.rs  main.rs
tests/heading_level_auto_bump/: README-expected.md
tests/marker_inside_doc/: README-template.md
tests/option_check_ok/: .gitignore
tests/option_cmd_check_fail/: README.md
tests/option_cmd_check_fail_line_terminator/: README.md
tests/option_cmd_check_no_fail_on_warnings/: README.md
tests/option_cmd_entrypoint_bin/: Cargo.toml  README-expected.md
tests/option_cmd_entrypoint_select_bin/: Cargo.toml
tests/option_cmd_entrypoint_select_bin_custom_path/: Cargo.toml  README-expected.md
tests/option_cmd_entrypoint_select_bin_single/: Cargo.toml  README-expected.md
tests/option_cmd_heading_base_level/: README-expected.md  README-template.md
tests/option_cmd_intralinks_all_features/: Cargo.toml  README-expected.md  README-template.md
tests/option_cmd_intralinks_features/: Cargo.toml  README-expected.md
tests/option_cmd_intralinks_no_default_features/: README-expected.md
tests/option_cmd_intralinks_strip_links/: README-expected.md  README-template.md
tests/option_cmd_intralinks_strip_links_disambiguators/: README-expected.md
tests/option_cmd_line_terminator_crlf/: .gitattributes  README-template.md
tests/option_cmd_line_terminator_lf/: .gitattributes
tests/option_cmd_manifest_path/: .cargo-rdme.toml  README-expected.md
tests/option_cmd_override_readme_path/: .gitignore
tests/option_cmd_workspace/: README-expected.md
tests/option_cmd_workspace_dependency_collision/: Cargo.toml  README-expected.md
tests/option_conf_file_entrypoint_bin/: .cargo-rdme.toml
tests/option_conf_file_entrypoint_select_bin/: Cargo.toml
tests/option_conf_file_entrypoint_select_bin_custom_path/: .cargo-rdme.toml  Cargo.toml
tests/option_conf_file_heading_base_level/: .cargo-rdme.toml  README-expected.md
tests/option_conf_file_intralinks_all_features/: .cargo-rdme.toml
tests/option_conf_file_intralinks_docs_rs_base_url/: .cargo-rdme.toml  README-expected.md
tests/option_conf_file_intralinks_docs_rs_version/: .cargo-rdme.toml  README-expected.md
tests/option_conf_file_intralinks_features/: .cargo-rdme.toml
tests/option_conf_file_intralinks_no_default_features/: .cargo-rdme.toml  Cargo.toml
tests/option_conf_file_intralinks_strip_links/: .cargo-rdme.toml  README-expected.md
tests/option_conf_file_line_terminator_crlf/: .cargo-rdme.toml
tests/option_conf_file_override_readme_path/: .cargo-rdme.toml
tests/option_conf_file_workspace/: .cargo-rdme.toml  Cargo.toml  README-expected.md
tests/rust_code_block_remove_comments/: README-expected.md
tests/separate_bin_and_lib/: Cargo.toml  README-expected.md
tests/simple_single_marker_no_footer/: README-expected.md  README-template.md
tests/transform_intralinks_all_item_kinds/: Cargo.toml  README-expected.md
tests/transform_intralinks_all_items_kinds/: README-expected.md
tests/transform_intralinks_ambiguous_module/: README-expected.md
tests/transform_intralinks_backticked/: README-expected.md
tests/transform_intralinks_crate_name_hyphen/: Cargo.toml  README-expected.md
tests/transform_intralinks_disambiguators/: README-expected.md
tests/transform_intralinks_external_crate/: Cargo.toml  README-expected.md
tests/transform_intralinks_impl_items/: README-expected.md
tests/transform_intralinks_impl_other_module/: README-expected.md
tests/transform_intralinks_item_path_collision/: README-expected.md
tests/transform_intralinks_multiple_modules/: README-expected.md
tests/transform_intralinks_non_intralink_targets/: README-expected.md
tests/transform_intralinks_package_and_crate_names/: Cargo.toml  README-expected.md  README-template.md
tests/transform_intralinks_procedural_macros/: Cargo.toml  README-expected.md
tests/transform_intralinks_reexported_module/: README-expected.md
tests/transform_intralinks_reference_links/: README-expected.md  README-template.md
tests/transform_intralinks_relative/: README-expected.md
tests/transform_intralinks_shortcut/: README-expected.md
tests/transform_intralinks_shortcut_unresolved/: README-expected.md
tests/transform_intralinks_shorthand/: README-expected.md  README-template.md
tests/transform_intralinks_shorthand_refs/: Cargo.toml  README-expected.md  README-template.md
tests/transform_intralinks_simple/: README-expected.md
tests/transform_intralinks_skip_rustdoc_when_no_intralinks/: Cargo.toml  README-expected.md
tests/transform_intralinks_skip_rustdoc_when_strip_intralinks/: README-expected.md
tests/transform_intralinks_stdlib_links/: README-expected.md
tests/transform_intralinks_workspace_dep/: Cargo.toml  README-expected.md
tests/transform_rust_code_block_add_markdown_tag/: README-expected.md
tests/transform_rust_code_block_remove_comments/: README-expected.md  README-template.md
tests/transform_rust_code_nested_fenced_blocks/: README-expected.md
tools/: check.sh  release.sh
(+63 files in other folders)
