[package]
name = "cargo-rdme"
description = "Cargo command to create your `README.md` from your crate's documentation"
version = "1.4.8-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.74.0"

homepage = "https://github.com/orium/cargo-rdme"
repository = "https://github.com/orium/cargo-rdme"
documentation = "https://docs.rs/cargo-rdme"
readme = "README.md"

keywords = ["readme", "cargo", "documentation"]
categories = ["development-tools::cargo-plugins"]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/cargo-rdme", branch = "main", service = "github" }

[dependencies]
cargo_metadata = "0.19.0"
clap = "4.5.21"
clap-cargo = "0.14.1"
# Disable ssh support in git2 to avoid depending on openssl (which fails to build if an unsupported version is found).
git2 = { version = "0.19.0", default-features = false }
indoc = "2.0.5"
itertools = "0.13.0"
pulldown-cmark = "0.12.2"
syn = { version = "2.0.89", features = ["full", "extra-traits"] }
termcolor = "1.4.1"
thiserror = "2.0.3"
toml = "0.8.19"
unicase = "2.8.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
match-same-arms = "allow"
missing-errors-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
