[package]
name = "cargo-rdme"
description = "Cargo command to create your `README.md` from your crate's documentation"
version = "1.4.9"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2024"
rust-version = "1.86.0"

homepage = "https://github.com/orium/cargo-rdme"
repository = "https://github.com/orium/cargo-rdme"
documentation = "https://docs.rs/cargo-rdme"
readme = "README.md"

keywords = ["readme", "cargo", "documentation"]
categories = ["development-tools::cargo-plugins"]

license = "MIT"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/cargo-rdme", branch = "main", service = "github" }

[dependencies]
cargo_metadata = "0.23.0"
clap = "4.5.48"
clap-cargo = "0.18.0"
# Disable ssh support in git2 to avoid depending on openssl (which fails to build if an unsupported version is found).
git2 = { version = "0.20.2", default-features = false }
indoc = "2.0.6"
itertools = "0.14.0"
pulldown-cmark = "0.13.0"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
termcolor = "1.4.1"
thiserror = "2.0.17"
toml = "0.9.7"
unicase = "2.8.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
match-same-arms = "allow"
missing-errors-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
