[package]
name = "cargo-rdme"
description = "Cargo command to create your `README.md` from your crate's documentation"
version = "2.1.1-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2024"
rust-version = "1.87.0"

homepage = "https://github.com/orium/cargo-rdme"
repository = "https://github.com/orium/cargo-rdme"
documentation = "https://docs.rs/cargo-rdme"
readme = "README.md"

keywords = ["readme", "cargo", "documentation"]
categories = ["development-tools::cargo-plugins"]

license = "MIT"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/cargo-rdme", branch = "main", service = "github" }

[dependencies]
cargo_metadata = "0.23.1"
clap = "4.6.1"
clap-cargo = "0.18.3"
gix = { version = "0.85.0", default-features = false, features = ["status", "dirwalk", "sha1"] }
indoc = "2.0.7"
itertools = "0.15.0"
pulldown-cmark = "0.13.4"
rustdoc-json = "0.9.10"
rustdoc-types = "0.60.0"
rustup-toolchain = "0.1.10"
serde_json = "1.0.150"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
termcolor = "1.4.1"
thiserror = "2.0.18"
toml = "1.1.2"
unicase = "2.9.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

enum-variant-names = "allow"
if-not-else = "allow"
inline-always = "allow"
match-bool = "allow"
match-same-arms = "allow"
missing-errors-doc = "allow"
module-name-repetitions = "allow"
needless-raw-string-hashes = "allow"
new-without-default = "allow"
non-ascii-literal = "allow"
partialeq-ne-impl = "allow"
similar-names = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
use-self = "allow"
